# MSight_Core

./: .env-example  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
cli/: download_data.py  launch_aggregator.py  launch_aws_sequence_pusher.py  launch_aws_sns_pusher.py  launch_aws_video_pusher.py  launch_buffering_sort.py  launch_bytes_viewer.py  launch_detection_results_viewer.py  launch_downloaded_image_player.py  launch_http.py  launch_ifm.py  launch_image_local_dumper.py  launch_image_to_video_aggregator.py  launch_image_viewer.py  launch_kinesis_pusher.py  launch_local_image.py  launch_pointcloud_local_dumper.py  launch_pointcloud_viewer.py  launch_rtsp.py  launch_sdsm_encoder.py  launch_udp_server.py  launch_velodyne_lidar.py  launch_video_local_dumper.py  launch_websocket_client.py  reset_redis.py  status.py
conf/: redis.conf
docker/: Dockerfile  Dockerfile-local  Dockerfile-pytorch2.7.1-cpu  Dockerfile-pytorch2.7.1-cuda12.8-cudnn9
docs/: gen_ref_pages.py  index.md
examples/local_image/: .env-tcp  .env-unix-socket  README.md  docker-compose-unix-socket.yml  docker-compose.yml
examples/local_image/data/: redis.conf
examples/mcity_det/: README.md  config.yml  test_detection_result_data.old.py  utils.py
examples/mcity_det/checkpoints/: yolox-nano-b8-lr5e-5-nomix-no-mos-multistep.pth  (+1 more)
libs/ouster/: bctRealtimeSubscriber-2.2.0-py3-none-any.whl
msight_core/: __init__.py  topics.py  utils.py
msight_core/data/: __init__.py  base.py  bytes.py  detection_result.py  image.py  pointcloud.py  utils.py  video.py
msight_core/nodes/: __init__.py  async_source_node.py  base.py  data_process_aggregator.py  data_process_buffering_sort.py  data_process_image_to_video_aggregator.py  data_process_sdsm_encoder.py  sink_aws_sequence_pusher.py  sink_aws_sns_pusher.py  sink_aws_video_pusher.py  sink_bytes_viewer.py  sink_detection_results_viewer.py  sink_http.py  sink_ifm.py  sink_image_local_dumper.py  sink_image_viewer.py  sink_kinesis_pusher.py  sink_pointcloud_local_dumper.py  sink_pointcloud_viewer.py  sink_video_local_dumper.py  source_downloaded_image_player.py  source_local_image.py  source_rtsp.py  source_server.py  source_udp_server.py  source_velodyne_lidar.py  source_websocket.py  utils.py
msight_core/pubsub/: __init__.py  base.py  kafka_pubsub.py  nats_pubsub.py  redis_pubsub.py  utils.py
tests/: test_logger.py
tests/communication/: test_node_register.py  test_redis_publish.py  test_topic.py
tests/data/: sample_point_cloud.pcd  test_bytes_data.py  test_data_base.py  test_image_data.py  test_pointcloud_data.py
tools/: udp_sender.py  udp_server.py
